# beam-firebird

./: .gitignore  beam-firebird.cabal  stack.yaml
Database/Beam/: Firebird.hs
Database/Beam/Firebird/: Connection.hs  FromRow.hs  Internal.hs  Ok.hs  Syntax.hs  ToRow.hs  Types.hs
example/: EmployeesFB.hs
